<resources>
    <string name="app_name">Aero Test</string>
    <string name="home">Главная</string>
    <string name="catalog">Каталог</string>
    <string name="sales">Акции</string>
    <string name="profile">Профиль</string>
    <string name="basket">Корзина</string>
    <string name="lorem">Мир бесконечен женщины любой,
В нем море чувств, эмоций рой.
Улыбкой выражает их, и грацией,
И голоса прелестной интонацией.
Мужчина мир иначе отражает:
Эмоции он матом выражает.
(с)

Строчки вяжутся в стишок,
Море лижет сушу.
Дети какают в горшок,
А большие в душу.
(с)

Бывает, проснешься как птица -
Крылатой пружиной на взводе -
И хочется жить и трудиться!. .
Но к завтраку это проходит.
(с)

Бывало, выйду утром в поле
И солнцу нежно улыбнусь.
Росой прохладною умоюсь,
Травою мягкой подотрусь.. .
(с)

Не грусти, оно того не стоит,
Улыбайся чаще и милей.
Жизнь подвижна, нету в ней застоя,
Было грустно, станет веселей.
Солнце выйдет и разгонит тучи.
Я приеду. Искренне любя,
Твой Дружок красивый и могучий
Стоя поприветствует меня!
(с)

В существовании своём ты ищешь смысл,
а я из тех, кто этим не болеет.
Ведь если смысл еще имеет наша жизнь,
существованье точно смысла не имеет.
(С)

Ну и напоследок самое оптимистичное и философское. И тоже о нашей жизни:
Качусь я по крыше,
Качусь и молчу.
Чего же орать-то -
Еще не лечу
(с) </string>
    <string name="products">изделий</string>
</resources>
