<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_catalog"
        android:enabled="true"
        android:icon="@drawable/ic_diamond"
        android:title="@string/catalog"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_sales"
        android:enabled="true"
        android:icon="@drawable/ic_percentage"
        android:title="@string/sales"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_avatar"
        android:title="@string/profile"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_basket"
        android:enabled="true"
        android:icon="@drawable/ic_package"
        android:title="@string/basket"
        app:showAsAction="ifRoom"/>
</menu>